--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   web:
-    image: ganawa/as207414web
+    build: ./
     container_name: asn
     ports:
       - "5000:5000"
