--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -12,7 +12,8 @@ on:
       - v*
 
 jobs:
-  get-website-version:
+
+  metadata_raw-version:
     name: Determine the intended website version
     runs-on: ubuntu-latest
     outputs:
@@ -27,29 +28,51 @@ jobs:
       - name: git descibe
         id: git-describe
         run: |
-          git describe --first-parent
-          echo "::set-output name=raw-version::$(git describe --first-parent)"
+          git describe --always
+          echo "::set-output name=raw-version::$(git describe --always)"
 
-      - name: Decide version number
-        id: get-website-version
-        shell: bash
-        env:
-          RAW_VERSION: ${{ steps.git-describe.outputs.raw-version }}
-        run: |
-          echo "::set-output name=website-version::${RAW_VERSION#v}"
-
-  get-go-version:
+  metadata_go-version:
     name: "Determine Go toolchain version"
     runs-on: ubuntu-latest
     outputs:
-      go-version: ${{ steps.get-go-version.outputs.go-version }}
+      go-version: ${{ steps.version.outputs.go-version }}
 
     steps:
       - uses: actions/checkout@v2
       - name: Determine Go version
-        id: get-go-version
-        # We use .go-version as our source of truth for current Go
-        # version, because "goenv" can react to it automatically.
+        id: version
         run: |
           echo "Building with Go $(cat .go-version)"
           echo "::set-output name=go-version::$(cat .go-version)"
+
+
+  build:
+      name: Build for ${{ matrix.goos }}_${{ matrix.goarch }}
+      runs-on: ubuntu-latest
+      needs:
+        - metadata_raw-version
+        - metadata_go-version
+      strategy:
+        matrix:
+          include:
+            - {goos: "freebsd", goarch: "386"}
+            - {goos: "freebsd", goarch: "amd64"}
+            - {goos: "freebsd", goarch: "arm"}
+            - {goos: "linux", goarch: "386"}
+            - {goos: "linux", goarch: "amd64"}
+            - {goos: "linux", goarch: "arm"}
+            - {goos: "linux", goarch: "arm64"}
+            - {goos: "openbsd", goarch: "386"}
+            - {goos: "openbsd", goarch: "amd64"}
+            - {goos: "solaris", goarch: "amd64"}
+            - {goos: "windows", goarch: "386"}
+            - {goos: "windows", goarch: "amd64"}
+        fail-fast: false
+
+      steps:
+        - uses: actions/checkout@v2
+
+        - name: Install Go toolchain
+          uses: actions/setup-go@v2
+          with:
+            go-version: ${{ needs.get-go-version.outputs.go-version }}
