upload only binaries to prevent double zip

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -17,7 +17,7 @@ jobs:
     name: Determine the intended website version
     runs-on: ubuntu-latest
     outputs:
-      raw-version: ${{ steps.get-website-version.outputs.product-version }}
+      raw-version: ${{ steps.git-describe.outputs.raw-version }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -80,9 +80,8 @@ jobs:
           run: |
             mkdir dist out
             go build -ldflags "-w -s -X main.version=${{ needs.metadata_raw-version.outputs.raw-version }}" -o=./dist/as207414_ui ./cmd/ui
-            zip -r -j out/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}.zip dist/
 
-        - uses: actions/upload-artifact@v2
+        - uses: actions/upload-artifact@v3
           with:
-            name: as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}.zip
-            path: out/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}.zip
+            name: as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}
+            path: out/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}
