--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -6,8 +6,6 @@ on:
     branches:
       - main
       - develop
-      - release/*
-      - feature/*
     tags:
       - v*
 
@@ -17,20 +15,15 @@ jobs:
     name: Determine the intended website version
     runs-on: ubuntu-latest
     outputs:
-      raw-version: ${{ steps.git-describe.outputs.raw-version }}
+      raw-version: ${{ steps.gitversion.outputs.version }}
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: git descibe
-        id: git-describe
-        run: |
-          git describe --always --tags
-          echo "::set-output name=raw-version::$(git describe --always --tags)"
-
       - name: Git Version
         uses: codacy/git-version@2.2.0
+        id: gitversion
         with:
           prefix: v
           release-branch: main
