--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -65,63 +65,42 @@ jobs:
           with:
             go-version: ${{ needs.metadata_go-version.outputs.go-version }}
 
-        - name: Build
+        - name: Build binaries
           env:
             GOOS: ${{ matrix.goos }}
             GOARCH: ${{ matrix.goarch }}
           run: |
             mkdir out
-            go build -ldflags "-w -s -X main.version=${{ needs.metadata_raw-version.outputs.raw-version }}" -o=out/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }} ./cmd/ui
+            go build -ldflags "-w -s -X main.version=${{ needs.metadata_raw-version.outputs.raw-version }}" \
+              -o=build/deploy/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }} \
+              ./cmd/ui
 
-        - uses: actions/upload-artifact@v3
+        - name: Docker Login
+          uses: docker/login-action@v1
           with:
-            name: as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}
-            path: out/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }}
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-  # docker-build:
-  #   name: Build docker  for linux_${{ matrix.arch }}
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       arch: ["amd64"]
-  #     fail-fast: false
-  #   needs:
-  #     - build
-  #   steps:
-  #     - uses: actions/download-artifact@v3
-  #       with:
-  #         name: as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_linux_${{ matrix.arch }}
+        - name: Login to Github Packages
+          uses: docker/login-action@v1
+          with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GITHUB_TOKEN }}
 
-  #     - name: Print directory
-  #       run: |
-  #         ls -l
+        - name: Set up Docker Buildx
+          id: buildx
+          uses: docker/setup-buildx-action@v1
 
-      # - name: Docker Login
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
-      #     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      # - name: Login to Github Packages
-      #   uses: docker/login-action@v1
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.repository_owner }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-
-      # - name: Set up Docker Buildx
-      #   id: buildx
-      #   uses: docker/setup-buildx-action@v1
-
-      # - name: Build and push Docker images
-      #   uses: docker/build-push-action@v2
-      #   with:
-      #     builder: ${{ steps.buildx.outputs.name }}
-      #     context: .
-      #     file: Dockerfile
-      #     push: true
-      #     build-args: |
-      #       ANSIBLE_VERSION=${{ env.ANSIBLE_VERSION }}
-      #     tags: |
-      #       ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:latest
-      #       ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
+        - name: Build and push Docker images
+          uses: docker/build-push-action@v2
+          with:
+            builder: ${{ steps.buildx.outputs.name }}
+            context: .
+            file: build/deploy/Dockerfile
+            push: true
+            build-args: |
+              ANSIBLE_VERSION=${{ env.ANSIBLE_VERSION }}
+            tags: |
+              ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:latest
+              ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
