--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -48,32 +48,22 @@ jobs:
       needs:
         - metadata_raw-version
         - metadata_go-version
-      strategy:
-        matrix:
-          include:
-            - {goos: "linux", goarch: "386"}
-            - {goos: "linux", goarch: "amd64"}
-            - {goos: "linux", goarch: "arm"}
-            - {goos: "linux", goarch: "arm64"}
-        fail-fast: false
-
       steps:
         - uses: actions/checkout@v2
-
         - name: Install Go toolchain
           uses: actions/setup-go@v2
           with:
             go-version: ${{ needs.metadata_go-version.outputs.go-version }}
-
         - name: Build binaries
           env:
-            GOOS: ${{ matrix.goos }}
-            GOARCH: ${{ matrix.goarch }}
+            GOOS: linux
+            GOARCH: amd64
           run: |
-            mkdir out
             go build -ldflags "-w -s -X main.version=${{ needs.metadata_raw-version.outputs.raw-version }}" \
-              -o=build/deploy/as207414_${{ needs.metadata_raw-version.outputs.raw-version }}_${{ matrix.goos }}_${{ matrix.goarch }} \
-              ./cmd/ui
+              -o=bin/as207414_${{ matrix.goos }}_${{ matrix.goarch }} \
+              ./cmd/ui && \
+            chmod +x bin/as207414_${{ matrix.goos }}_${{ matrix.goarch }} && \
+            cp bin/as207414_${{ matrix.goos }}_${{ matrix.goarch }} build/docker/as207414_${{ matrix.goos }}_${{ matrix.goarch }}
 
         - name: Docker Login
           uses: docker/login-action@v1
@@ -86,7 +76,7 @@ jobs:
           with:
             registry: ghcr.io
             username: ${{ github.repository_owner }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+            password: ${{ secrets.GHP_TOKEN }}
 
         - name: Set up Docker Buildx
           id: buildx
@@ -99,8 +89,6 @@ jobs:
             context: .
             file: build/deploy/Dockerfile
             push: true
-            build-args: |
-              ANSIBLE_VERSION=${{ env.ANSIBLE_VERSION }}
             tags: |
-              ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:latest
-              ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
+              ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+              ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
