--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -86,8 +86,8 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             builder: ${{ steps.buildx.outputs.name }}
-            context: ./build/docker
-            file: Dockerfile
+            context: build/docker
+            file: ./Dockerfile
             push: true
             tags: |
               ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
