--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -78,17 +78,29 @@ jobs:
             username: ganawa
             password: ${{ secrets.GHP_TOKEN }}
 
-        - name: Set up Docker Buildx
-          id: buildx
-          uses: docker/setup-buildx-action@v1
+        - name: Build and push docker image
+          run: |
+            cd build/docker
+            docker build . \
+              -t ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }} \
+              -t ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
 
-        - name: Build and push Docker images
-          uses: docker/build-push-action@v2
-          with:
-            builder: ${{ steps.buildx.outputs.name }}
-            context: ./build/docker
-            file: ./build/docker/Dockerfile
-            push: true
-            tags: |
-              ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
-              ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+        - name: Push docker image
+          run: |
+            docker push ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+            docker push ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+
+        # - name: Set up Docker Buildx
+        #   id: buildx
+        #   uses: docker/setup-buildx-action@v1
+
+        # - name: Build and push Docker images
+        #   uses: docker/build-push-action@v2
+        #   with:
+        #     builder: ${{ steps.buildx.outputs.name }}
+        #     context: ./build/docker
+        #     file: ./build/docker/Dockerfile
+        #     push: true
+        #     tags: |
+        #       ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+        #       ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
