--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -60,12 +60,11 @@ jobs:
             GOOS: linux
             GOARCH: amd64
           run: |
-            BIN_NAME="as207414_${$GOOS}_${GOARCH}"
             go build -ldflags "-w -s -X main.version=${{ needs.metadata_raw-version.outputs.raw-version }}" \
-              -o=bin/${BIN_NAME} \
+              -o=bin/as207414_linux_amd64 \
               ./cmd/ui && \
-            chmod +x bin/${BIN_NAME} && \
-            cp bin/${BIN_NAME} build/docker/${BIN_NAME}
+            chmod +x bin/as207414_linux_amd64 && \
+            cp bin/as207414_linux_amd64 build/docker/as207414_linux_amd64
 
         - name: Docker Login
           uses: docker/login-action@v1
