--- a/.github/workflows/build-latest.yml
+++ b/.github/workflows/build-latest.yml
@@ -1,10 +1,10 @@
-name: Build AS207414 website packages
+name: Build AS207414 development website packages
 
 on:
   workflow_dispatch:
   push:
-    tags:
-      - v*
+    branches:
+      - main
 
 jobs:
 
@@ -76,29 +76,14 @@ jobs:
             username: ganawa
             password: ${{ secrets.GHP_TOKEN }}
 
-        - name: Build and push docker image
+        - name: Build docker image
           run: |
             cd build/docker
             docker build . \
-              -t ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }} \
-              -t ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+              -t ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:latest \
+              -t ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
 
         - name: Push docker image
           run: |
-            docker push ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
-            docker push ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
-
-        # - name: Set up Docker Buildx
-        #   id: buildx
-        #   uses: docker/setup-buildx-action@v1
-
-        # - name: Build and push Docker images
-        #   uses: docker/build-push-action@v2
-        #   with:
-        #     builder: ${{ steps.buildx.outputs.name }}
-        #     context: ./build/docker
-        #     file: ./build/docker/Dockerfile
-        #     push: true
-        #     tags: |
-        #       ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
-        #       ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ needs.metadata_raw-version.outputs.raw-version }}
+            docker push ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:latest
+            docker push ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
