--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -32,7 +32,7 @@ jobs:
     name: "Determine Go toolchain version"
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.version.outputs.go-version }}
+      version: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v2
       - name: Determine Go version
