--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Install Go toolchain
         uses: actions/setup-go@v2
         with:
-          go-version: $GOVER
+          go-version: ${{ needs.go-version.outputs.go-version }}
       - name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
