--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -76,6 +76,12 @@ jobs:
             ./cmd/ui && \
           chmod +x bin/as207414_linux_amd64 && \
           cp bin/as207414_linux_amd64 build/docker/as207414_linux_amd64
+      - uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+      - name: run/configure-gcp-docker
+        run: |
+          gcloud auth configure-docker us-docker.pkg.dev -q
       - name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
@@ -96,6 +102,7 @@ jobs:
             -t ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ env.SEMVER }}
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ env.SEMVER }}
           docker push ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ env.SEMVER }}
+          us-docker.pkg.dev/${{ secrets.GOOGLE_PROJECT }}/oci/as207414-ui:${{ env.SEMVER }}
 
       - name: Build and push main/latest docker image
         if: contains(env.BRANCH, 'main')
@@ -106,6 +113,7 @@ jobs:
             -t ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:latest
           docker push ghcr.io/${{ github.repository_owner }}/as207414-ui:latest
+          us-docker.pkg.dev/${{ secrets.GOOGLE_PROJECT }}/oci/as207414-ui:latest
 
       - name: Build and push non-tagged docker image
         if: "!startsWith(env.BRANCH, 'develop') && !startsWith(env.BRANCH, 'release') && !startsWith(env.BRANCH, 'hotfix') && !startsWith(env.branchName, 'main') && !startsWith(env.BRANCH, 'tags')"
@@ -116,3 +124,4 @@ jobs:
             -t ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ env.SHORTSHA }}
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/as207414-ui:${{ env.SHORTSHA }}
           docker push ghcr.io/${{ github.repository_owner }}/as207414-ui:${{ env.SHORTSHA }}
+          us-docker.pkg.dev/${{ secrets.GOOGLE_PROJECT }}/oci/as207414-ui:${{ env.SHORTSHA }}
